Fix on Mobile
Menu wasn't coming out!

--- a/styles/dev/styles_mobile.css
+++ b/styles/dev/styles_mobile.css
@@ -83,6 +83,10 @@
 		text-align: center;
 	}
 
+	#nav-mobile {
+		left: 0%;
+	}
+
 	#nav-mobile .menu_items {
 		line-height: 80px;
 		font-size: 10px;
